force-app/main/default/objects/GfAmsSKU__c/GfAmsSKU__c.object-meta.xml
<CustomObject>
    <description>SKU  본사직원 등록</description>
    <label>상품별 SKU (Old)</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>