force-app/main/default/objects/GfAmsSKU__c/fields/Goods__c.field-meta.xml
<CustomField>
    <fullName>Goods__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>상품</description>
    <label>Goods</label>
    <referenceTo>GfAmsGoods__c</referenceTo>
    <relationshipName>SKU</relationshipName>
    <type>Lookup</type>
</CustomField>