force-app/main/default/objects/GfAmsSKU__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>재료</description>
    <label>Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>