force-app/main/default/objects/GfAmsSKU__c/fields/SKUoption5__c.field-meta.xml
<CustomField>
    <fullName>SKUoption5__c</fullName>
    <label>SKU option5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>