force-app/main/default/objects/GfAmsSKU__c/fields/SKUOptions4__c.field-meta.xml
<CustomField>
    <fullName>SKUOptions4__c</fullName>
    <label>SKU Options4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>